# quist-ai-backup

./: CMakeLists.txt  Makefile  README.md  game_output.txt  game_stderr.txt
assets/textures/: README.txt
shaders/: atmosphere.frag  bloom_down.frag  bloom_up.frag  chunk.frag  chunk.vert  crack.frag  crack.vert  deferred_light.frag  deferred_light.vert  fullscreen.vert  gbuffer.frag  gbuffer.vert  hud.frag  hud.vert  outline.vert  shadow.frag  shadow.vert  sky.frag  sky.vert  ssao.frag  ssao_blur.frag  ssr.frag  tonemap.frag  ui.vert  volumetric.frag
src/core/: Game.cpp  Game.h  Input.cpp  Input.h  Time.cpp  Time.h  Window.cpp  Window.h
src/gameplay/: DroppedBlock.cpp  DroppedBlock.h  Hotbar.cpp  Hotbar.h  Inventory.cpp  Inventory.h  MiningSystem.cpp  MiningSystem.h  PlacementSystem.cpp  PlacementSystem.h
src/generation/: BiomeGen.cpp  BiomeGen.h  CaveGen.cpp  CaveGen.h  Heightmap.cpp  Heightmap.h  Noise.cpp  Noise.h
src/physics/: AABB.cpp  AABB.h  Physics.cpp  Physics.h  Raycast.cpp  Raycast.h
src/player/: Camera.cpp  Camera.h  Player.cpp  Player.h
src/rendering/: ChunkRenderer.cpp  ChunkRenderer.h  DeferredPipeline.cpp  DeferredPipeline.h  FullscreenQuad.cpp  FullscreenQuad.h  GBuffer.cpp  GBuffer.h  HudRenderer.cpp  HudRenderer.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  SkyRenderer.cpp  SkyRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/world/: Block.cpp  Block.h  BlockRegistry.cpp  BlockRegistry.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  World.cpp  World.h
tools/: fix_grass.py
